Fixed loading of masks with the offset

That patch introduces the following changes:
1) Removed lazy initialization of masks' selection. Now you always must
   call initSelection after the creation of the mask (probably, we can
   move it into c-tor).
2) KisMask::setSelection must only be used when we need to switch the
   underlying selection explicitly (like, e.g. in
   KisImage::setGlobalSelection). In the rest of the cases you need to
   work with already existent selection.

BUG:304369