krita/ui/kra/kis_kra_load_visitor.h
@@ -62,7 +62,7 @@ private:
     bool loadProfile(KisPaintDeviceSP device,  const QString& location);
     bool loadFilterConfiguration(KisFilterConfiguration* kfc, const QString& location);
     bool loadMetaData(KisNode* node);
-    KisSelectionSP loadSelection(const QString& location);
+    void loadSelection(const QString& location, KisSelectionSP dstSelection);
     QString getLocation(KisNode* node, const QString& suffix = "");
 
 private:
