krita/image/tests/kis_transparency_mask_test.cpp
@@ -70,6 +70,7 @@ void KisTransparencyMaskTest::testApply()
 
     // Everything is selected
     initImage(image, layer, dev, mask);
+    mask->initSelection(0, layer);
     mask->apply(dev, QRect(0, 0, 200, 100));
     QImage qimage = dev->convertToQImage(0, 0, 0, 200, 100);
 
@@ -117,6 +118,7 @@ void KisTransparencyMaskTest::testMoveParentLayer()
     KisTransparencyMaskSP mask;
 
     initImage(image, layer, dev, mask);
+    mask->initSelection(0, layer);
     mask->selection()->getOrCreatePixelSelection()->invert();
     mask->select(QRect(50, 50, 100, 100));
 
